Fix styling on mobile nav bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,7 @@
 body {
   background-color: #eafbf4;
 }
-div {
-  margin-bottom: 1rem;
-}
+
 .watched {
   display: inline-block;
   margin-left: 5px;
@@ -110,20 +108,6 @@ Nav bar
   color: white;
 }
 
-@media screen and (max-width: 599px) {
-  .nav_list {
-    display: inline-block;
-    margin: 15px 10px 0px 0px;
-  }
-  .nav_list a {
-    font-size: 12px;
-    color: white;
-  }
-  .sign_in_status {
-    font-size: 10px;
-  }
-}
-
 .sign_in_status {
   float: right;
   display: flex;
@@ -134,6 +118,38 @@ Nav bar
 
 .username {
   font-size: 1rem;
+}
+
+@media screen and (max-width: 599px) {
+  .nav_list {
+    display: inline-block;
+    margin: 15px 10px 0px 0px;
+  }
+  .nav_list a {
+    font-size: 10px;
+    color: white;
+  }
+  .sign_in_status {
+    font-size: 8px;
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+  .username {
+    font-size: 0.75rem;
+  }
+  .login-button input {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav_list {
+    display: inline-block;
+    margin: 15px 10px 0px 0px;
+  }
+  .nav_list a {
+    font-size: 16px;
+    color: white;
+  }
 }
 
 /*
